# DARBS

./: README.md
darbs-master/branches/xml/: CMakeLists.txt  config.ini
darbs-master/branches/xml/boost/extension/impl/: library_impl.hpp
darbs-master/branches/xml/common/src/: DarbsCmds.hpp  Logger.cpp  Logger.hpp  TcpClient.cpp  TcpClient.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpServer.cpp  TcpServer.hpp  Types.hpp  Util.cpp  Util.hpp
darbs-master/branches/xml/docs/: CMakeLists.txt
darbs-master/branches/xml/docs/source/: agent.rst  blackboard.rst  conf.py  counterpoint.rst  gui.rst  index.rst  install.rst  intro.rst  procedural.rst  quick_start.rst  rule_based.rst  terminal.rst
darbs-master/branches/xml/examples/counterpoint/: AddCantusFirmus.drf  AddDiatonicNotes.drf  AddOptions.drf  FinishHarmonyAnalysis.drf  FinishOptionAdding.drf  HarmonyAnalyser.dkf  Init.dkf  MelodyAnalyser.dkf  NoteConstrainer.dkf  OptionAdder.dkf  run.sh
darbs-master/branches/xml/examples/counterpoint/player/: index.htm
darbs-master/branches/xml/examples/counterpoint/player/css/: main.css
darbs-master/branches/xml/examples/counterpoint/player/js/: audiolet_app.js
darbs-master/branches/xml/examples/counterpoint/player/js/audiolet/: Audiolet.js
darbs-master/branches/xml/examples/highfields-remembered/: CMakeLists.txt
darbs-master/branches/xml/examples/procedural/src/: square.cpp
darbs-master/branches/xml/examples/rb-wildcard/: add_data.drf  move_data.drf  wildcard.dkf
darbs-master/branches/xml/examples/simple/: simple.dkf
darbs-master/branches/xml/examples/vehicle/: Display_Results.drf  Read_Check_Continue.drf  Vehicle_Bicycle.drf  Vehicle_Bus.drf  Vehicle_Car.drf
darbs-master/branches/xml/examples/vehicle-quickstart/: AddData.drf
darbs-master/branches/xml/gui/: development.ini  go-pylons.py  setup.cfg  setup.py
darbs-master/branches/xml/gui/data/templates/: base.mako.py  blackboard.mako.py  ks.mako.py  main.mako.py  partition.mako.py  select_partition.mako.py
darbs-master/branches/xml/gui/gui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
darbs-master/branches/xml/gui/gui/config/: environment.py  routing.py
darbs-master/branches/xml/gui/gui/controllers/: main.py  pattern.py
darbs-master/branches/xml/gui/gui/lib/: app_globals.py  helpers.py
darbs-master/branches/xml/gui/gui/lib/agent/counterpoint/: AddIntervalTypes.drf  AnalyseHarmony.drf  ChooseOption.drf  CompileOptions.drf  FinishHarmonyConstraint.drf  (+2 more)
darbs-master/branches/xml/gui/gui/public/js/: main.js
darbs-master/branches/xml/gui/gui/templates/: blackboard.mako  log.mako  partition.mako
darbs-master/branches/xml/gui/gui/tests/functional/: test_ks.py  test_partition.py  test_pattern.py
darbs-master/branches/xml/gui/guinjs/backend/: app.js  package-lock.json  package.json
darbs-master/branches/xml/gui/guinjs/backend/controllers/: agents.js  biomes.js  user.js
darbs-master/branches/xml/gui/guinjs/backend/middleware/: auth.js
darbs-master/branches/xml/gui/guinjs/backend/models/: agent.js  biome.js  user.js
darbs-master/branches/xml/gui/guinjs/backend/routes/: agents.js  biomes.js
darbs-master/branches/xml/gui/guinjs/frontendMEH/: angular.json
darbs-master/branches/xml/gui/guinjs/frontendMEH/src/: index.html  styles.scss
darbs-master/branches/xml/ks/: CMakeLists.txt
darbs-master/branches/xml/ks/src/: AbstractConditional.cpp  AbstractConditional.hpp  AbstractRunnable.cpp  AbstractRunnable.hpp  Action.cpp  Action.hpp  Client.cpp  Client.hpp  ClientTypes.hpp  KnowledgeSource.cpp  KnowledgeSource.hpp  Precondition.cpp  Precondition.hpp  ProceduralKS.cpp  ProceduralKS.hpp  Rule.cpp  Rule.hpp  RuleBasedKS.cpp  RuleBasedKS.hpp  SharedObject.cpp  SharedObject.hpp
darbs-master/branches/xml/pugixml/: pugixml.cpp
darbs-master/branches/xml/release/: DARBS-2.0.0-Linux.deb  DARBS-2.0.0-Linux.rpm  DARBS-2.0.0.tar.bz2  DARBS-2.0.1-Linux.deb  DARBS-2.0.1-Linux.rpm  gui-0.1dev_r288-py2.6.egg
darbs-master/branches/xml/server/: CMakeLists.txt
darbs-master/branches/xml/server/src/: Blackboard.cpp  Blackboard.hpp  DarbsServer.cpp  DarbsServer.hpp
darbs-master/branches/xml/templates/: hpp
darbs-master/branches/xml/terminal/: CMakeLists.txt
darbs-master/branches/xml/terminal/src/: darbs_terminal.cpp
darbs-master/branches/xml/tests/tests_ks/: CMakeLists.txt
darbs-master/branches/xml/tests/tests_ks/src/: tests.cpp
darbs-master/branches/xml/tests/tests_server/: CMakeLists.txt
darbs-master/branches/xml/tests/tests_server/src/: tests.cpp  tests_Blackboard.cpp
darbs-master/branches/xml/util/: CMakeLists.txt
darbs-master/branches/xml/util/src/: util.cpp
darbs-master/trunk/: CMakeLists.txt  COPYING.txt
darbs-master/trunk/cmake/modules/: FindLibDL.cmake
darbs-master/trunk/common/src/: TcpClient.cpp  TcpClient.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpServer.cpp  TcpServer.hpp
darbs-master/trunk/docs/: CMakeLists.txt
darbs-master/trunk/docs/source/: blackboard.rst  conf.py  index.rst  install.rst  intro.rst  ks.rst  procedural.rst  rule_based.rst  sample_rule.rst  syntax.rst  terminal.rst
darbs-master/trunk/examples/procedural/src/: Square.dkf
darbs-master/trunk/ks/: CMakeLists.txt
darbs-master/trunk/ks/src/: LnSharedObjectLoader.cpp  LnSharedObjectLoader.hpp  LnTokenizer.cpp  LnTokenizer.hpp  main.cpp  pwcclient.cpp  pwcclient.hpp  pwcinstantiation.cpp  pwcinstantiation.hpp  pwcknowledgesource.cpp  pwcknowledgesource.hpp  pwcpreconditionstatements.cpp  pwcpreconditionstatements.hpp  pwcproceduralks.cpp  pwcproceduralks.hpp  pwcrule.cpp  pwcrule.hpp  pwcruleks.cpp  pwcruleks.hpp  pwcvariable.cpp  pwcvariable.hpp
darbs-master/trunk/server/: CMakeLists.txt
darbs-master/trunk/server/src/: DarbsServer.cpp  DarbsServer.hpp  LnBlackboard.cpp  LnBlackboard.hpp  LnDarbsCmds.hpp  LnTokenizer.cpp  LnTokenizer.hpp  main.cpp
darbs-master/trunk/templates/: cpp
darbs-master/trunk/terminal/: CMakeLists.txt
darbs-master/trunk/terminal/src/: darbs_terminal.cpp
darbs-master/trunk/tests/tests_server/: CMakeLists.txt
darbs-master/trunk/tests/tests_server/src/: tests_LnTokenizer.cpp
(+1045 files in other folders)
